// Paste this into https://dbdiagram.io/d to generate ER diagram
// Birthday Reminder Bot — schema для Ukrgasbank тестового

Project birthday_bot {
  database_type: 'PostgreSQL'
  Note: '''
    # Birthday Reminder Bot

    Ключові архітектурні рішення:
    - PK = telegram_id (bigint, природний ключ)
    - Всі FK з явним ON DELETE policy (CASCADE для user data, SET NULL для audit)
    - Partial unique indexes для nullable полів (phone_number)
    - CHECK constraints на рівні БД (state enum, birthday sanity)
    - Auto-update updated_at через trigger
    - Idempotency через processed_updates і reminders_log unique
  '''
}

// ═══════════════════════════════════════════════════════════
// USERS
// ═══════════════════════════════════════════════════════════

Table users {
  telegram_id bigint [pk, note: 'PK = Telegram user ID']
  phone_number varchar(20) [note: 'E.164 format з shareContact']
  username varchar(100)
  first_name varchar(100) [note: 'Nullable: fallback на username у коді']
  last_name varchar(100)
  language_code varchar(10) [note: 'Без дефолту — беремо з Telegram']
  timezone varchar(50) [not null, default: 'Europe/Kyiv']
  reminder_days_before int[] [not null, default: `ARRAY[7,3,1,0]`, note: 'Нагадування за N днів до ДН']
  registered_at timestamptz [not null, default: `now()`]
  is_active boolean [not null, default: true, note: 'false = заблокував бота (403)']

  indexes {
    phone_number [unique, name: 'idx_users_phone_not_null', note: 'Partial: WHERE phone_number IS NOT NULL']
    telegram_id [name: 'idx_users_active', note: 'Partial: WHERE is_active = true']
  }
}

// ═══════════════════════════════════════════════════════════
// CONTACTS
// ═══════════════════════════════════════════════════════════

Table contacts {
  id bigserial [pk]
  owner_id bigint [not null, ref: > users.telegram_id, note: 'ON DELETE CASCADE']
  name varchar(100) [not null, note: 'CHECK length 1-100']
  birthday date [not null, note: 'CHECK: між 1900-01-01 та CURRENT_DATE']
  notes text
  interests text [note: 'Інтереси для AI gift suggestions']
  relationship varchar(50) [not null, default: 'friend']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-update через trigger']

  indexes {
    (owner_id, `LOWER(name)`) [unique, note: 'Case-insensitive unique']
    (`EXTRACT(MONTH FROM birthday)`, `EXTRACT(DAY FROM birthday)`) [name: 'idx_contacts_birthday_mmdd', note: 'Для cron reminders по MM-DD']
    owner_id
  }
}

// ═══════════════════════════════════════════════════════════
// USER SESSIONS (FSM state)
// ═══════════════════════════════════════════════════════════

Table user_sessions {
  telegram_id bigint [pk, ref: > users.telegram_id, note: 'ON DELETE CASCADE']
  state varchar(50) [not null, default: 'idle', note: 'Flexible FSM state; strict CHECK removed in migration_004']
  context jsonb [note: 'Тимчасові дані: {name,date,interests,intent...}']
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-update через trigger']

  indexes {
    updated_at [note: 'Для TTL cleanup застарілих сесій (>1h)']
  }
}

// ═══════════════════════════════════════════════════════════
// PROCESSED UPDATES (idempotency guard)
// ═══════════════════════════════════════════════════════════

Table processed_updates {
  update_id bigint [pk, note: 'Telegram update_id — унікальний per bot']
  processed_at timestamptz [not null, default: `now()`]

  indexes {
    processed_at [note: 'Для TTL cleanup (>7 days)']
  }

  Note: 'Idempotency: INSERT ... ON CONFLICT DO NOTHING. Захищає від повторної обробки update при рестарті.'
}

// ═══════════════════════════════════════════════════════════
// BOT OFFSET (long polling singleton)
// ═══════════════════════════════════════════════════════════

Table bot_offset {
  id int [pk, default: 1, note: 'CHECK (id = 1) — singleton row']
  last_update_id bigint [not null, default: 0]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Persistence long polling offset між рестартами Node-RED'
}

// ═══════════════════════════════════════════════════════════
// REMINDERS LOG (idempotency per year)
// ═══════════════════════════════════════════════════════════

Table reminders_log {
  id bigserial [pk]
  contact_id bigint [not null, ref: > contacts.id, note: 'ON DELETE CASCADE']
  owner_id bigint [not null, ref: > users.telegram_id, note: 'ON DELETE CASCADE']
  sent_at timestamptz [not null, default: `now()`]
  remind_year int [not null]
  days_before int [not null, default: 0]

  indexes {
    (contact_id, remind_year, days_before) [unique, note: 'Idempotency per reminder stage']
    (owner_id, sent_at)
  }
}

// ═══════════════════════════════════════════════════════════
// GIFT IDEAS
// ═══════════════════════════════════════════════════════════

Table gift_ideas {
  id bigserial [pk]
  contact_id bigint [not null, ref: > contacts.id, note: 'ON DELETE CASCADE']
  owner_id bigint [not null, ref: > users.telegram_id, note: 'ON DELETE CASCADE']
  title varchar(200) [not null]
  description text
  price_range varchar(50)
  status varchar(20) [not null, default: 'suggested', note: 'suggested/saved/bought/rejected']
  source varchar(20) [not null, default: 'ai', note: 'ai/manual']
  generated_at timestamptz [not null, default: `now()`]

  indexes {
    (contact_id, generated_at)
    (owner_id, status)
  }
}

// ═══════════════════════════════════════════════════════════
// AI PROMPTS
// ═══════════════════════════════════════════════════════════

Table ai_prompts {
  key varchar(50) [pk]
  description text
  system_prompt text [not null]
  temperature numeric(3,2) [not null, default: 0.7]
  max_tokens int [not null, default: 1000]
  updated_at timestamptz [not null, default: `now()`]
}

// ═══════════════════════════════════════════════════════════
// AUDIT LOG (immutable, compliance)
// ═══════════════════════════════════════════════════════════

Table audit_log {
  id bigserial [pk]
  telegram_id bigint [ref: > users.telegram_id, note: 'ON DELETE SET NULL — history переживає видалення юзера']
  action varchar(50) [not null, note: 'user_registered, contact_added, contact_deleted, reminder_sent, ai_fallback...']
  entity_type varchar(50)
  entity_id bigint
  payload jsonb [note: 'Snapshot стану для compliance']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (telegram_id, created_at) [name: 'idx_audit_user_time']
    (action, created_at) [name: 'idx_audit_action_time']
    created_at
  }

  Note: 'Append-only. Banking compliance. Ніколи не DELETE/UPDATE.'
}

// ═══════════════════════════════════════════════════════════
// RATE LIMITS (reserved for sliding window)
// ═══════════════════════════════════════════════════════════

Table rate_limits {
  telegram_id bigint [not null]
  action varchar(50) [not null, note: "'message', 'ai_call'"]
  count int [not null, default: 1]
  window_start timestamptz [not null, default: `now()`]

  indexes {
    (telegram_id, action) [pk]
    window_start [note: 'Для cleanup старих вікон']
  }

  Note: 'Sliding window: max N actions per T minutes per user'
}
